syntax = "proto3";
package com.oracle.infy.wookiee.grpc.srcgen.testService;

message GrpcASError {
  oneof OneOf {
    GrpcDestinationError destinationError = 1;
    GrpcConnectionError connectionError = 2;
  }
}


message GrpcDestinationError {
  oneof OneOf {
    GrpcMaxyDestinationValidationError maxyDestinationValidationError = 1;
    GrpcMaxyConnectionValidationError maxyConnectionValidationError = 2;
  }
}


message GrpcConnectionError {
  oneof OneOf {
    GrpcMaxyConnectionValidationError maxyConnectionValidationError = 1;
  }
}


message GrpcPerson{
  string name = 1;
  int32 age = 2;
  GrpcMaybeMaybeString optOpt = 3;
  GrpcMaybeMaybeMaybeBoolean opt3 = 4;
}


message GrpcMaxyDestinationValidationError{
  int32 code = 1;
  string maxyError = 2;
  GrpcPerson person = 3;
  GrpcMaybeString details = 4;
}


message GrpcMaxyConnectionValidationError{
  int32 code = 1;
  string maxyError = 2;
  GrpcPerson person = 3;
}


message GrpcMaybeMaybeString {
  oneof OneOf {
    GrpcMaybeString some = 1;
    GrpcNone none = 2;
  }
}


message GrpcMaybeMaybeBoolean {
  oneof OneOf {
    GrpcMaybeBoolean some = 1;
    GrpcNone none = 2;
  }
}


message GrpcMaybeBoolean {
  oneof OneOf {
    bool some = 1;
    GrpcNone none = 2;
  }
}


message GrpcMaybeString {
  oneof OneOf {
    string some = 1;
    GrpcNone none = 2;
  }
}


message GrpcNone {
}


message GrpcMaybeMaybeMaybeBoolean {
  oneof OneOf {
    GrpcMaybeMaybeBoolean some = 1;
    GrpcNone none = 2;
  }
}


service TestService {
  rpc test(GrpcPerson) returns (GrpcPerson) {}
}
